2001-09-26  Jesper Skov  <jskov@redhat.com>

	* cdl/eth_drivers.cdl: Require the string functions.

	* src/stand_alone/eth_drv.c: Fix warnings.

2001-09-25  Hugo Tyson  <hmt@redhat.com>

	* src/net/eth_drv.c (eth_drv_dsr): Assert that the "sc" given to
	eth_drv_dsr() really is a sc from the valid list.  This can save a
	few hours debug time of a typo.

2001-09-13  Hugo Tyson  <hmt@redhat.com>

	* src/net/eth_drv.c (eth_drv_tickle_devices): New function to call
	can_send() on all devices to allow them to unstick from a lost
	interrupt or other wedge - it's up to the device to detect this,
	of course, can_send() does not explicitly do this, it's just used
	as an opportunity harmlessly to get control into the device so it
	can examine its world.

2001-09-05  Gary Thomas  <gthomas@redhat.com>

	* src/stand_alone/eth_drv.c (eth_drv_init): Don't initialize
	structures if ESA is zero.  This is used by low level drivers
	to indicate that a device is present, but can't currently be
	used.  The eCos driver handles this case as well.

2001-08-31  Hugo Tyson  <hmt@redhat.com>
2001-08-31  Andrew Lunn <Andrew.Lunn@ascom.ch>

	* src/net/eth_drv.c (eth_drv_tx_done): Guard against a NULL key
	return - which can be caused by race conditions in the driver,
	this is the neatest fixup.  It's good defensive programming
	anyway and ASCOM's tests indicate a benefit for CASE 106059.

2001-08-22  Gary Thomas  <gthomas@redhat.com>

	* src/stand_alone/eth_drv.c: 
	printf() is no longer a part of RedBoot.  Thus all programs
	must use diag_printf() and related functions instead.

	* cdl/eth_drivers.cdl: Only enable warning/debug modes if RedBoot
	is present as the debug environment (since there are implicit
	dependencies on RedBoot functions).

2001-08-20  Jonathan Larmour  <jlarmour@redhat.com>

	* src/net/eth_drv.c (eth_drv_send): Move endif location to fix build
	error.

2001-08-17  Jonathan Larmour  <jlarmour@redhat.com>

	* cdl/eth_drivers.cdl (CYGSEM_IO_ETH_DRIVERS_DEBUG): Now booldata.