@@ -1,3 +1,7 @@
+2001-10-05  Jonathan Larmour  <jlarmour@redhat.com>
+
+	* src/net/eth_drv.c: Add default implementation of min().
+
 2001-09-26  Jesper Skov  <jskov@redhat.com>
 
 	* cdl/eth_drivers.cdl: Require the string functions.
